words as xgb features

--- a/anti-spam/AntiSpam.ipynb
+++ b/anti-spam/AntiSpam.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -288,7 +288,7 @@
        "0                4              1303      2.63472         51             12  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -382,7 +382,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def top_popular_words(texts, n_words=100):\n",
+    "    spam_words = CountVectorizer()\n",
+    "    spam_words.fit(text_words2_strs(texts.text_words))\n",
+    "    word_counts = sorted(spam_words.vocabulary_.values(), reverse=True)[:n_words]\n",
+    "    words = []\n",
+    "    for (w, c) in spam_words.vocabulary_.items():\n",
+    "        if c in word_counts: \n",
+    "            words.append(w)\n",
+    "    return words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "top_spam_words = top_popular_words(train_texts[train_texts['is_spam']])\n",
+    "top_ok_words = top_popular_words(train_texts[train_texts['is_spam'] == False])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def add_top_words_features(texts, spam_words, ok_words):\n",
+    "    feature_names = []\n",
+    "    for i, w in enumerate(spam_words):\n",
+    "        feature_names.append('spam_w_{}'.format(i))\n",
+    "        texts['spam_w_{}'.format(i)] = texts.text_words.apply(lambda x: x.count(w)/float(len(x)))\n",
+    "    \n",
+    "    for i, w in enumerate(ok_words):\n",
+    "        feature_names.append('ok_w_{}'.format(i))\n",
+    "        texts['ok_w_{}'.format(i)] = texts.text_words.apply(lambda x: x.count(w)/float(len(x)))\n",
+    "    return feature_names, texts\n",
+    "top_words_features, _ = add_top_words_features(train_texts, top_spam_words, top_ok_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "train_texts['porno_count'] = train_texts.text_words.apply(lambda x: x.count('порно') + x.count('porno'))\n",
+    "train_texts['download'] = train_texts.text_words.apply(lambda x: x.count('скачать'))\n",
+    "train_texts['free'] = train_texts.text_words.apply(lambda x: x.count('бесплатно'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -390,10 +455,10 @@
     {
      "data": {
       "text/plain": [
-       "139"
+       "174"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,30 +597,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.89822281114989433"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "features = ['words_num', 'avg_word_len', 'title_words_num', 'anchor_words_num', \n",
-    "            'compression', 'links_num', 'domain_length']#, 'svm_pred']\n",
+    "            'compression', 'links_num', 'domain_length']  + \\\n",
+    "            ['porno_count', 'download', 'free'] + top_words_features\n",
     "X = train_texts[features].as_matrix()\n",
-    "xgb_clf = xgb.XGBClassifier(max_depth = 7, n_estimators=300, silent=False)\n",
+    "xgb_clf = xgb.XGBClassifier(max_depth = 11, n_estimators=700, silent=False)\n",
     "xgb_pred = cross_val_predict(xgb_clf, X, Y, folds)\n",
     "score = f1_score(Y, xgb_pred, average='weighted')\n",
-    "score"
+    "score\n",
+    "# max_depth = 11, n_estimators=1000 0.91914686550056024\n",
+    "# max_depth = 7, n_estimators=1000 0.91816696118942887"
    ]
   },
   {
