--- a/sentences/Sentences.ipynb
+++ b/sentences/Sentences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -23,16 +23,28 @@
     "from sklearn import metrics\n",
     "from sklearn.utils import shuffle\n",
     "from scipy.sparse import csc_matrix\n",
-    "from scipy.sparse import coo_matrix"
+    "from scipy.sparse import coo_matrix\n",
+    "from sklearn.preprocessing import OneHotEncoder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22676"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_data = []\n",
     "with open('train_data.json') as f:\n",
@@ -43,11 +55,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5670"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "test_data = []\n",
     "with open('test_data.json') as f:\n",
@@ -58,11 +81,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.', '\"', '»', '…', '?', '!']"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "to_test = Counter()\n",
     "for d in test_data:\n",
@@ -74,18 +108,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Marks': [{'Index': 26060, 'Mark': '.', 'Pos': 91},\n",
+       "  {'Index': 26061, 'Mark': '.', 'Pos': 282},\n",
+       "  {'Index': 26062, 'Mark': '.', 'Pos': 350},\n",
+       "  {'Index': 26063, 'Mark': '.', 'Pos': 432}],\n",
+       " 'Paragraph': 'На первой площадке она встретила доктора, когда он уже возвращался, неся на руках астронома. Он остановился и своим острым, как скальпель, языком отрезал несколько слов, не очень громко Миссис Паркер застыла в неловкой позе, как платье из негнущейся материи, соскользнувшее с гвоздя. С тех пор чувство неловкости в душе и теле осталось у нее навсегда. Время от времени любопытные жильцы спрашивали, что же это ей сказал тогда доктор.'}"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "test_data[-100]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -106,18 +155,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "883"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(vocab)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -129,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -145,14 +205,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "window_before = 6\n",
-    "window_after = 6\n",
+    "window_before = 10\n",
+    "window_after = 10\n",
     "samples = []\n",
     "for x in train_data:\n",
     "    paragraph = x['Paragraph']\n",
@@ -166,41 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "x = lil_matrix((11505, 1), dtype=np.int8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "x[1]= 1\n",
-    "x[10000] = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "x.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {
     "collapsed": true
    },
@@ -210,21 +236,13 @@
     "    w = s.before+s.mark+s.after\n",
     "    u = [int(i.isupper()) for i in w]\n",
     "    a = [int(i.isalpha()) for i in w]\n",
-    "    sz_w = len(vocab) * len(w)\n",
-    "    sz = sz_w + len(u) + len(a)\n",
-    "    x = dok_matrix((sz, 1), dtype=np.int8)\n",
-    "    for i, c in enumerate(w):\n",
-    "        x[vocab[c]*(i+1)] = 1\n",
-    "    for i, c in enumerate(u):\n",
-    "        x[sz_w+i] = c\n",
-    "    for i, c in enumerate(a):\n",
-    "        x[sz_w+len(u)+i] = c\n",
-    "    return x"
+    "    m = [int(i in to_test) for i in w]\n",
+    "    return [vocab[i] for i in w] + u + a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {
     "collapsed": false
    },
@@ -233,50 +251,30 @@
     "X = []\n",
     "Y = []\n",
     "for i, s in enumerate(samples):\n",
-    "    if i % 10000 == 0:\n",
-    "        print (i)\n",
     "    X.append(sample2input(s))\n",
     "    Y.append(s.is_end)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26476"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "len(vocab)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "train_X, test_X, train_Y, test_Y = train_test_split(X, Y, test_size=0.2)\n",
-    "clf = MLPClassifier(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(30, 25, 20, 10))\n",
-    "clf.fit(train_X, train_Y)\n",
-    "res = []\n",
-    "for x in test_X:\n",
-    "    xx = np.array(x).reshape(1, -1)\n",
-    "    res.append(clf.predict(xx)[0])\n",
-    "metrics.roc_auc_score(test_Y, res), metrics.f1_score(test_Y, res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "test_X = dict()\n",
+    "test_X = []\n",
     "for x in test_data:\n",
     "    paragraph = x['Paragraph']\n",
     "    marks = x['Marks']\n",
@@ -284,39 +282,154 @@
     "        pos = m['Pos']\n",
     "        ind = m['Index']\n",
     "        before, after, mark = get_window(paragraph, pos)        \n",
-    "        test_X[ind] = sample2input(Sample(before, mark, after, False))"
+    "        test_X.append(sample2input(Sample(before, mark, after, False)))\n",
+    "len(test_X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OneHotEncoder(categorical_features='all', dtype=<class 'numpy.float64'>,\n",
+       "       handle_unknown='error', n_values='auto', sparse=True)"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "enc = OneHotEncoder()\n",
+    "enc.fit(X + test_X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "X = enc.transform(X)\n",
+    "test_X = enc.transform(test_X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "883"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "clf = MLPClassifier(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(30, 25, 20, 10))\n",
-    "clf.fit(X, Y)\n",
-    "ans = dict()\n",
-    "for i, x in test_X.items():\n",
-    "    xx = np.array(x).reshape(1, -1)\n",
-    "    ans[i] = int(clf.predict(xx)[0])"
+    "# train_X, test_X, train_Y, test_Y = train_test_split(X, Y, test_size=0.2)\n",
+    "# clf = MLPClassifier(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(100, 50, 25, 10))\n",
+    "# clf.fit(train_X, train_Y)\n",
+    "# res = []\n",
+    "# for x in test_X:\n",
+    "#     xx = np.array(x).tolist()\n",
+    "#     res.append(clf.predict(xx)[0])\n",
+    "# metrics.roc_auc_score(test_Y, res), metrics.f1_score(test_Y, res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MLPClassifier(activation='relu', alpha=1e-05, batch_size='auto', beta_1=0.9,\n",
+       "       beta_2=0.999, early_stopping=False, epsilon=1e-08,\n",
+       "       hidden_layer_sizes=(200, 100, 50, 10), learning_rate='constant',\n",
+       "       learning_rate_init=0.001, max_iter=200, momentum=0.9,\n",
+       "       nesterovs_momentum=True, power_t=0.5, random_state=None,\n",
+       "       shuffle=True, solver='lbfgs', tol=0.0001, validation_fraction=0.1,\n",
+       "       verbose=False, warm_start=False)"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf = MLPClassifier(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(200, 100, 50, 10))\n",
+    "clf.fit(X, Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
+   "source": [
+    "ans = dict()\n",
+    "for i, x in enumerate(test_X):\n",
+    "    xx = np.array(x).tolist()\n",
+    "    ans[i+1] = int(clf.predict(xx)[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26476"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(ans)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
